# internal/adapters/http/fiberapp/dto.go
@@ -4,7 +4,7 @@ import "github.com/gofiber/fiber/v3"
 
 type RegisterRequest struct {
 	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=8"`
+	Password string `json:"password" validate:"required"`
 }
 
 type LoginRequest struct {
@@ -31,6 +31,15 @@ type RegisterUserResponse struct {
 type UserResponse struct {
 	ID    string `json:"id"`
 	Email string `json:"email"`
+}
+
+type UpdateMeRequest struct {
+	Email string `json:"email" validate:"required,email"`
+}
+
+type ChangePasswordRequest struct {
+	OldPassword string `json:"old_password" validate:"required"`
+	NewPassword string `json:"new_password" validate:"required"`
 }
 
 type SuccessResponse struct {
